# smash

./: Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
benches/: benchmark.rs  playground.rs
examples/: hello.rs
smash/: Cargo.toml
smash/examples/: hello.rs
smash/src/: error.rs  lib.rs
smash/src/actor/: actor.rs  agent.rs  event.rs  letter.rs  mod.rs  owner.rs  proxy.rs  types.rs  world.rs
src/: lib.rs
src/actor/: error.rs
