[package]
name = "smash"
version = "0.0.1"
authors = ["Jian Chen <admin@chensoft.com>"]
edition = "2021"
description = "Placeholder"
documentation = "https://docs.rs/smash"
readme = "README.md"
repository = "https://github.com/chensoft/smash"
license = "MIT"
keywords = []

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "playground"
harness = false

[[bench]]
name = "benchmark"
harness = false
